--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ version: '3'
 services:
   app:
     image: harbor.chay-techs.com/portfolio/portfolio-app:latest
-    ports:
-      - 3000:3000
     restart: always
+    depends_on:
+      - nginx
+      
+  nginx:
+    image: harbor.chay-techs.com/portfolio/nginx:latest
+    ports:
+      - 8081:8080
