--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: harbor.chay-techs.com/portfolio/portfolio-app:latest
+    image: harbor.chay-techs.com/portfolio/portfolio-front:1.0.2
     restart: always
     depends_on:
       - nginx
