--- a/kubernetes/secret.yml
+++ b/kubernetes/secret.yml
@@ -5,5 +5,5 @@ metadata:
   namespace: chay-techs-production
 type: kubernetes.io/tls
 data:
-  tls.crt: 
-  tls.key: 
+  tls.crt: <PLACEHOLDER_SECRET>
+  tls.key: <PLACEHOLDER_SECRET>
