--- a/yechezkePortfolio/package.json
+++ b/yechezkePortfolio/package.json
@@ -2,6 +2,7 @@
   "name": "simone-personal-portfolio",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "@popperjs/core": "^2.11.6",
